--- a/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
+++ b/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
@@ -13,7 +13,7 @@
 
         <mat-form-field appearance="outline">
             <mat-label>Permitir Parcelamento?</mat-label>
-            <mat-select matInput placeholder="Permitir Parcelamento? " [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required>
+            <mat-select  placeholder="Permitir Parcelamento? " [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required>
               <mat-option [value]="true">Sim</mat-option>
               <mat-option [value]="false">Não</mat-option>
             </mat-select>
@@ -22,7 +22,7 @@
           
              <mat-form-field appearance="outline">
             <mat-label>Máximo de Parcelas</mat-label>
-            <input matInput type = "number" placeholder="" [(ngModel)]="paymentMethod.fpgNumMaxParcelas" name="fpgNumMaxParcelas" required>
+            <input matInput type = "number" placeholder="" [(ngModel)]="paymentMethod.fpgNumMaxParcelas" name="fpgNumMaxParcelas" >
         </mat-form-field>
 
         <mat-form-field appearance="outline">
